05232023_invoiceLogs done and refactored validation Middleware and existing endpoints (#10)
