# server/modules/invoices/router.js
@@ -2,20 +2,19 @@ const express = require('express');
 
 const { routeValidator } = require('../../middleware/validating');
 const { errorCatcher } = require('../../middleware/errorHandling');
-const { queryItemsSplitter } = require('../../middleware/queryStringSplitting');
 const handler = require('./handler');
-const { newInvoiceSchema, invoiceUpdateSchema, getInvoicesSchema } = require('../../schemas/invoice-types');
+const { newInvoiceSchema_body, invoiceUpdateSchema_body, invoiceUpdateSchema_params, getInvoicesSchema_query, getInvoiceSchema_params } = require('../../schemas/invoice-types');
 const invoiceNotesRouter = require('./notes/router');
-// const { invoiceLogsRouter } = require('./logs/router');
+const invoiceLogsRouter = require('./logs/router');
 
 const router = express.Router();
 const h = handler;
 
 router.use('/notes', invoiceNotesRouter);
-// router.use('/logs', invoiceLogsRouter);
+router.use('/logs', invoiceLogsRouter);
 
-router.get('/', queryItemsSplitter('invoiceIDs'), routeValidator(getInvoicesSchema, 'query'), errorCatcher(h.getInvoices));
-router.post('/', routeValidator(newInvoiceSchema, 'body'), errorCatcher(h.createInvoice));
-router.patch('/:invoiceID', routeValidator(invoiceUpdateSchema, 'body', 'invoiceID'), errorCatcher(h.updateInvoice));
+router.get('/', routeValidator(getInvoicesSchema_query, 'query'), routeValidator(getInvoiceSchema_params, 'params'), errorCatcher(h.getInvoices));
+router.post('/', routeValidator(newInvoiceSchema_body, 'body'), errorCatcher(h.createInvoice));
+router.patch('/:invoiceID', routeValidator(invoiceUpdateSchema_body, 'body'), routeValidator(invoiceUpdateSchema_params, 'params'), errorCatcher(h.updateInvoice));
 
 module.exports = router;
